--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,1 +1,14 @@
+[theme]
+base = "dark"
+primaryColor = "#00FF41"
+backgroundColor = "#0D1117"
+secondaryBackgroundColor = "#161B22"
+textColor = "#E6EDF3"
+font = "monospace"
 
+[server]
+enableCORS = false
+headless = true
+
+[browser]
+gatherUsageStats = false
