--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 streamlit>=1.36.0
 yfinance>=0.2.40
-pandas>=2.2.0
-pandas_ta>=0.3.14
-plotly>=5.22.0
+pandas>=2.0.0
+numpy>=1.24.0
+plotly>=5.15.0
+pandas_ta>=0.3.14b0
+scipy>=1.10.0
+pydeck>=0.8.0
 requests>=2.31.0
-numpy>=1.26.0
-scipy>=1.13.0
